--- a/dao/src/main/resources/db.properties
+++ b/dao/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://localhost:3306/library?logger=com.mysql.cj.log.StandardLogger&profileSQL=true&serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/library?useUnicode=true&characterEncoding=utf8&logger=com.mysql.cj.log.StandardLogger&profileSQL=true&serverTimezone=UTC
 user=root
 password=12345
