--- a/dao/src/main/resources/db.properties
+++ b/dao/src/main/resources/db.properties
@@ -1,3 +1,4 @@
 url=jdbc:mysql://localhost:3306/library?useUnicode=true&characterEncoding=utf8&logger=com.mysql.cj.log.StandardLogger&profileSQL=true&serverTimezone=UTC
 user=root
 password=12345
+driver=com.mysql.cj.jdbc.Driver
