--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -13,6 +13,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <mysql-connector-java.version>8.0.17</mysql-connector-java.version>
+        <h2.version>1.4.199</h2.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.DonBirnam.library</groupId>
@@ -23,7 +28,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.17</version>
+            <version>${mysql-connector-java.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -44,7 +49,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.199</version>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
